--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -2,6 +2,11 @@
 
 Consult the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guide] for information on using the wiki software.
 
+== Development ==
+
+Please see [[Development resources]]
+
+
 == Getting started ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
