--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -18,6 +18,10 @@ A read-only list where every status update to a bug (bugzilla entry) will get po
 
 A read-only list where every source code change (commit to the subversion server) gets posted.  Nice to keep posted on development progress.
 
+== Wiki ==
+
+This Wiki. You're already in it, if you're reading this.
+
 == Bugzilla ==
 
 Our bug tracking system, available at [http://bugzilla.gta01.hmw-consulting.de/ bugzilla.gta01].
