--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -4,8 +4,18 @@ Consult the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guid
 
 == Development ==
 
-Please see [[Development resources]]
+Please see 
 
+** [[Development resources]] - Describes the resources (lists, svn, ...)
+** [[Development process]] - Describes the actual process of development
+
+
+== Documentation ==
+
+Please see 
+
+** [[Documentation]] for end-user related documentation
+** [[Hardware]] for hardware-related documentation
 
 == Getting started ==
 
