*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -6,16 +6,16 @@ Consult the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guid
 
 Please see 
 
-** [[Development resources]] - Describes the resources (lists, svn, ...)
-** [[Development process]] - Describes the actual process of development
+* [[Development resources]] - Describes the resources (lists, svn, ...)
+* [[Development process]] - Describes the actual process of development
 
 
 == Documentation ==
 
 Please see 
 
-** [[Documentation]] for end-user related documentation
-** [[Hardware]] for hardware-related documentation
+* [[Documentation]] for end-user related documentation
+* [[Hardware]] for hardware-related documentation
 
 == Getting started ==
 
