*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,6 +1,6 @@
-<big>'''MediaWiki has been successfully installed.'''</big>
+<big>'''Welcome to the GTA01Wiki'''</big>
 
-Consult the [http://meta.wikipedia.org/wiki/MediaWiki_User%27s_Guide User's Guide] for information on using the wiki software.
+This is to be the evolving, definitive resource on GTA01 development.  The intention is to collaboratively improve and update all information on this site.
 
 == Development ==
 
