--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,7 +8,7 @@ Please see
 
 * [[Development resources]] - Describes the resources (lists, svn, ...)
 * [[Development process]] - Describes the actual process of development
-
+* [[Development Schedule]] - Describes the developement schedule and current status
 
 == Documentation ==
 
