--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -15,7 +15,8 @@ Please see
 Please see 
 
 * [[Documentation]] for end-user related documentation
-* [[Hardware]] for hardware-related documentation
+* [[Hardware]] for hardware-related (developer) documentation
+* [[Software]] for GTA01 software-related (developer) documentation
 
 == Getting started ==
 
