--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -18,7 +18,7 @@ Please see
 * [[Hardware]] for hardware-related (developer) documentation
 * [[Software]] for GTA01 software-related (developer) documentation
 
-== Getting started ==
+== Getting started with this wiki (GTA01 unrelated) ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
