/* Bootloader source code */

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -18,6 +18,12 @@ The current bootloader source code can be found at [http://people.gta01.hmw-cons
 
 Untar the sources, apply the patch.  run "make qt2410_config", run "make".  You will get a resulting "u-boot.bin" image, which you can directly flash (either using existing bootloader or [[sjf2410-linux]]) into NAND.
 
+
+== Bootloader binary ==
+
+The latest bootloader binary (for NAND) can be found at 
+[http://people.gta01.hmw-consulting.de/laforge/src/u-boot/current/u-boot.bin]
+
 == Bootloader development ==
 
 If you want to do bootloader development on the QT2410, it's easier to work with a bootloader image that can be downloaded via USB into RAM instead of flashing.
