*Empty MediaWiki Message*

--- a/Sjf2410-linux.mw
+++ b/Sjf2410-linux.mw
@@ -1,1 +1,5 @@
 sjf2410-linux is a linux-enabled version of the sjf2410 tool.  It allows you to use a [[wiggler]] compatible JTAG Probe to program the NAND and NOR flash attached to the S3C2410.
+
+The latest release can be found at [http://people.gta01.hmw-consulting.de/laforge/src/sjf2410-linux/current].
+
+More current sources will be kept in [subversion].
