--- a/Sjf2410-linux.mw
+++ b/Sjf2410-linux.mw
@@ -2,4 +2,4 @@ sjf2410-linux is a linux-enabled version of the sjf2410 tool.  It allows you to 
 
 The latest release can be found at [http://people.gta01.hmw-consulting.de/laforge/src/sjf2410-linux/current].
 
-More current sources will be kept in [subversion].
+More current sources will be kept in [[subversion]].
