*Empty MediaWiki Message*

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -13,3 +13,23 @@ Some additional patches are required for
 ** Some glue/configuration to pull all pieces together
 * [[GSM Communication Infrastructure]]
 ** The kernel-level part (TS07.10 line discipline, GPRS line discipline)
+
+
+== Kernel Patchset ==
+
+The latest patchset against the abovementioned vanilla kernel can be found at [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/]. This is a so-called "[http://savannah.nongnu.org/projects/quilt quilt] patchset".  In order to apply it, you have to untar it into a "patches" directory below the "linux-2.6.x" directory, and then call "quilt push -a", which pushes all patches onto the kernel.
+
+== Kernel Configuration ==
+
+The latest kernel configuration can be found at [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/].  Just copy it to the linux-2.6.x/.config file.
+
+== Kernel building ==
+
+The kernel build is executed as normal.  We actually only need the "vmlinux" target, not the "zImage".
+
+== bootable Kernel image ==
+
+A bootable kernel image called ''uImage'' is available from [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/]
+
+== creating a bootable kernel image ==
+u-boot needs all images (such as kernel, initrd, ...) in the form of an uImage.  This is basically just a special header adding CRC protection, version information, etc. Pleaes see [[u-boot]] for details.
