*Empty MediaWiki Message*

--- a/S3c2410_boot_usb.mw
+++ b/S3c2410_boot_usb.mw
@@ -1,3 +1,16 @@
+== General ==
+
 A small linux program for downlading executable code (such as boot-loader) into QT2410 RAM.
 
+== Source code ==
+
 Sources can be found at [http://people.gta01.hmw-consulting.de/laforge/src/s3c2410_boot_usb/current].
+
+
+== Usage ==
+
+s3c2410_boot_usb usage is quite straight forward:
+
+<pre>
+s3c2410_boot_usb <path_to_executable>
+</pre>
