--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -24,7 +24,7 @@ Untar the sources, apply the patch.  run "make qt2410_config", run "make".  You 
 == Bootloader binary ==
 
 The latest bootloader binary (for NAND) can be found at 
-[http://people.gta01.hmw-consulting.de/laforge/src/u-boot/current/u-boot.bin]
+[http://people.gta01.hmw-consulting.de/laforge/src/u-boot/current/u-boot.bin].  It should be written to the NAND flash address 0x00000000 (size 0x30000)
 
 == Bootloader development ==
 
