--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,6 +17,7 @@ Please see
 * [[Documentation]] for end-user related documentation
 * [[Hardware]] for hardware-related (developer) documentation
 * [[Software]] for GTA01 software-related (developer) documentation
+* [[To Do]] for a list of items that need to get done
 
 == Getting started with this wiki (GTA01 unrelated) ==
 
