*Empty MediaWiki Message*

--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -4,7 +4,9 @@ However, for ease of [[Bootloader]], [[Kernel]] and other development, a stand-a
 
 You should install it like
 <pre>
+# apt-get install gcc-3.4-base
 # dpkg --install binutils-arm-linux_2.15-5_i386.deb
 # dpkg --install libgcc1-arm-cross_3.4.3-1_all.deb 
+# dpkg --install cpp-3.4-arm-linux_3.4.3-1_i386.deb
 # dpkg --install gcc-3.4-arm-linux_3.4.3-1_i386.deb
 </pre>
