--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -2,7 +2,7 @@
 
 The GTA01 uses the [http://u-boot.sourceforge.net/ u-boot] bootloader.
 
-More information on u-boot can be found at [http://www.denx.de/wiki/DULG] and [http://linuxdevices.com/articles/AT5085702347.html].
+More information on u-boot can be found at [http://www.denx.de/wiki/DULG], [http://www.gumstix.org/tikiwiki/tiki-index.php?page=U-Boot] and [http://linuxdevices.com/articles/AT5085702347.html].
 
 However, the vanilla u-boot doesn't support many of the features that GTA01 needs, such as
 * Support for boot from NAND flahs using [[S3C2410 Steppingstone]]
@@ -12,7 +12,6 @@ However, the vanilla u-boot doesn't support many of the features that GTA01 need
 * Support to display bootup logo / status on S3C2410 Framebuffer
 
 [[User:HaraldWelte]] is working on those issues, and in fact most of them have already been implemented.
-
 
 == Bootloader source code ==
 
