--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -27,5 +27,6 @@ This Wiki. You're already in it, if you're reading this.
 Our bug tracking system, available at [http://bugzilla.gta01.hmw-consulting.de/ bugzilla.gta01].
 
 == SVN ==
+Subversion (AKA: SVN) is a development environment where files are stored into a central repository. The repository is much like an ordinary file server, except that it remembers every change ever made to your files and directories. This allows you to recover older versions of your files and examine the history of how and when your data changed. 
 
 There is a Subversion server available at svn.gta01.hmw-consulting.de. Web access via [http://svnweb.gta01.hmw-consulting.de/ SvnWeb]
