--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -15,9 +15,7 @@ Samsung S3C2410A
 The GSM/GPRS modem is Texas Instruments Calypso based
 
 == AGPS ==
-
-FIXME
-
+Hammerhead AGPS from Global Locate
 
 == SD-Card ==
 
