/* Getting started with this wiki (GTA01 unrelated) */

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -22,5 +22,6 @@ Please see
 == Getting started with this wiki (GTA01 unrelated) ==
 
 * [http://www.mediawiki.org/wiki/Help:Configuration_settings Configuration settings list]
+* [http://meta.wikimedia.org/wiki/Help:Wikitext_reference MediaWiki Wikitext Reference]
 * [http://www.mediawiki.org/wiki/Help:FAQ MediaWiki FAQ]
 * [http://mail.wikipedia.org/mailman/listinfo/mediawiki-announce MediaWiki release mailing list]
