--- a/Using_Subversion.mw
+++ b/Using_Subversion.mw
@@ -7,8 +7,9 @@ If you are using Linux, you are probably don't need more than these very short i
 
 ==== The Process ====
 Use svn, the Subversion command line client:
-
+<pre>
 $ svn co {{svn_trunk}} /your/path/to/your/working_copy
+</pre>
 Replace /your/path/to/your/working_copy with the actual path to the directory into which you wish to use all the GSM files. Or use a . (period) if you're already in that directory.
 
 ==== wget alternative ====
