--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -27,6 +27,41 @@ This Wiki. You're already in it, if you're reading this.
 Our bug tracking system, available at [http://bugzilla.gta01.hmw-consulting.de/ bugzilla.gta01].
 
 == SVN ==
-There is a Subversion server available at svn.gta01.hmw-consulting.de. Web access via [http://svnweb.gta01.hmw-consulting.de/ SvnWeb]
+There is a [http://subversion.tigris.org/ Subversion] server available at svn.gta01.hmw-consulting.de. 
+
+Web access for occasional browsing is available via [http://svnweb.gta01.hmw-consulting.de/ SvnWeb]
 
 If you need help, please read more about [[Using Subversion]].
+
+=== SVN Tree Layout ===
+
+The Subversion (svn) tree is laid out as follows:
+
+* trunk (main branch, similar to CVS "HEAD")
+** src (program source code)
+*** host (programs that work on the host PC)
+**** sjf2410-linux
+**** ...
+*** target (programs that work on the target device)
+**** dialer
+**** package_manager
+**** ...
+** doc (Documentation) 
+*** ...
+* branches (branches, created by lead developers if required)
+** src
+*** host
+**** ...
+*** target
+**** ...
+* developers (private/experimental branches, created by individual developers)
+** laforge
+** sean
+** mickey
+** ...
+* releases (official 'releases' of code in 'trunk' or 'branches')
+** src
+*** host
+**** ...
+*** target
+**** ...
