--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -29,6 +29,10 @@ Our bug tracking system, available at [http://bugzilla.gta01.hmw-consulting.de/ 
 == SVN ==
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.gta01.hmw-consulting.de. 
 
+Read-only access is provided via [http://svn.gta01.hmw-consulting.de/ http://svn.gta01.hmw-consulting.de/]. You should not normally use this URL, it's mainly for later public access after product release.
+
+Read-write access for developers is provided via [https://svn.gta01.hmw-consulting.de:2342/ https://svn.gta01.hmw-consulting.de:2342]
+
 Web access for occasional browsing is available via [http://svnweb.gta01.hmw-consulting.de/ SvnWeb]
 
 If you need help, please read more about [[Using Subversion]].
