--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -12,7 +12,7 @@ Main developer list, this is where all questions are raied and hopefully answere
 
 === buglog ===
 
-A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bugsquashing progess
+A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bugsquashing progress
 
 === commitlog ===
 
