--- a/Sjf2410-linux.mw
+++ b/Sjf2410-linux.mw
@@ -1,5 +1,7 @@
-sjf2410-linux is a linux-enabled version of the sjf2410 tool.  It allows you to use a [[wiggler]] compatible JTAG Probe to program the NAND and NOR flash attached to the S3C2410.
+sjf2410-linux is a linux-enabled version of the sjf2410 tool.  
 
-The latest release can be found at [http://people.gta01.hmw-consulting.de/laforge/src/sjf2410-linux/current].
+It allows you to use a [[wiggler]] compatible JTAG Probe to program the NAND and NOR flash attached to the S3C2410.
 
-More current sources will be kept in [[subversion]].
+The latest release can be found at http://people.gta01.hmw-consulting.de/laforge/src/sjf2410-linux/current.
+
+The current sources are kept in https://svn.gta01.hmw-consulting.de:2342/trunk/src/host/sjf2410-linux/
