*Empty MediaWiki Message*

--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -1,3 +1,5 @@
+== About OpenOCD ==
+
 [http://openocd.berlios.de/ OpenOCD] is a 100% free software On-chip-debugger for commonly-found ARM JTAG probes such as [[wiggler]], chamaeleon, jtag-key and others.
 
 It provides a human-readable telnet interface for manually halting/resuming the target device, reading/writing registers and memory, etc.
@@ -8,6 +10,14 @@ The GTA01 development team uses OpenOCD with a [[wiggler]] compatible probe as t
 
 
 == Getting OpenOCD ==
+
+=== Debian Package ===
+
+We now have a Debian binary package of OpenOCD, available from http://people.gta01.hmw-consulting.de/laforge/dpkg. Installing this package is the preferred method to install OpenPCD on your development machine like
+
+ dpkg --install openocd_82-1_i386.deb
+
+=== Source Code ===
 
 OpenOCD Revision 82 has been proven to work with our QT2410 target board and wiggler.  You can check rev. 82 out of the OpenOCD subversion via
 
