/* demo JFFS2 root image */

--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -16,7 +16,7 @@ Once the build server is running, it will create root filesystem images for us.
 
 === demo JFFS2 root image ===
 
-At the moment there is a very basic root fs image available from http://people.gta01.hmw-consulting.de/laforge/
+At the moment there is a very basic root fs image available from http://people.gta01.hmw-consulting.de/laforge/tmp/rootfs/rootfs.jffs2
 
 Please note that this image will take ages to boot the first time, since this boot finishes the installation process.
 
