--- a/Neo_1973_OpenOCD.mw
+++ b/Neo_1973_OpenOCD.mw
@@ -13,7 +13,7 @@ The GTA01 development team uses OpenOCD with a [[wiggler]] compatible probe as t
 
 === Debian Package ===
 
-We now have a Debian binary package of OpenOCD, available from http://people.gta01.hmw-consulting.de/laforge/dpkg. Installing this package is the preferred method to install OpenPCD on your development machine like
+We now have a Debian binary package of OpenOCD, available from http://people.gta01.hmw-consulting.de/laforge/dpkg. Installing this package is the preferred method to install OpenOCD on your development machine like
 
  dpkg --install openocd_82-1_i386.deb
 
