*Empty MediaWiki Message*

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -1,4 +1,3 @@
-
 == General ==
 
 The Kernel on the GTA01 is based on a vanilla 2.6.17.7 Linux kernel from [http://www.kernel.org/ kernel.org].
@@ -36,3 +35,12 @@ A bootable kernel image called ''uImage'' is available from [http://people.gta01
 
 == creating a bootable kernel image ==
 u-boot needs all images (such as kernel, initrd, ...) in the form of an uImage.  This is basically just a special header adding CRC protection, version information, etc. Pleaes see [[u-boot]] for details.
+
+
+== Kernel Boot Parameters ==
+
+The kernel image (once http://people.gta01.hmw-consulting.de/laforge/tmp/qt2410-biglcd.patch is integrated) has a new boot parameter "tft".
+
+If you boot without any tft= parameter, the 'stock' qt2410 240x320 TFT panel is assumed.
+
+If you boot with "tft=b" ('b' for big), the timings for the SHARP 640x480 TFT panel are used.
