--- a/Coding_Guidelines.mw
+++ b/Coding_Guidelines.mw
@@ -3,7 +3,17 @@
 general.
 
 == C Coding ==
-[http://developer.gnome.org/doc/guides/programming-guidelines/book1.html GNOME Programming Guidelines] asd
+All C code should be done in the C99 standard -- it's much more maintainable, less error prone,
+clean and concise, and removes a lot of C's warts.
+
+Here is some good information about C99:
+
+* http://www-128.ibm.com/developerworks/linux/library/l-c99.html?ca=dgr-lnxw07UsingC99
+* http://en.wikipedia.org/wiki/C_programming_language#C99
+
+This is a good C coding guide:
+
+[http://developer.gnome.org/doc/guides/programming-guidelines/book1.html GNOME Programming Guidelines]
 
 == C++ Coding ==
 [http://www.zen.uci.edu/~klefstad/s/C++-style.html C++ Style Guidelines]
