--- a/Coding_Guidelines.mw
+++ b/Coding_Guidelines.mw
@@ -13,7 +13,7 @@ Here is some good information about C99:
 
 This is a good C coding guide:
 
-[http://developer.gnome.org/doc/guides/programming-guidelines/book1.html GNOME Programming Guidelines]
+* [http://developer.gnome.org/doc/guides/programming-guidelines/book1.html GNOME Programming Guidelines]
 
 == C++ Coding ==
 [http://www.zen.uci.edu/~klefstad/s/C++-style.html C++ Style Guidelines]
