*Empty MediaWiki Message*

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -31,4 +31,18 @@ The GSM 02.07 specification (Version 7.1.0 Release 1998) lists a table of requir
 1.28 Network initiated Mobile Originated connection   O
 1.29 Support of Localised Service Area                O
 1.30 Support of GPRS Encryption                       M  (note 6)
+
+* Mandatory where a human interface is provided, i.e. may be in-appropriate for MS driven by external equipment.
+NOTE 1: The physical means of entering the characters 0-9, +, * and # may be keypad, voice input device, DTE or
+        others, but it is mandatory that there shall be the means to enter this information.
+NOTE 2: MTs with capabilities for Autocalling, or to which call initiating equipment can be connected via the "R"
+        or "S" interface, shall restrict repeated call attempts according to the procedures described in annex A.
+NOTE 3: Emergency calls shall be possible according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]).
+        This feature is only required to be provided by ME supporting Telephony.
+NOTE 4: Support of reception by the ME and storage of SMS MT in the SIM is mandatory, but its display is
+        optional. Reception and storage of a message shall be indicated by the MS.
+NOTE 5: The use of DTMF is only mandatory when the speech teleservice is being used or during the speech phase
+        of alternate speech/data and alternate speech/facsimile teleservices.
+NOTE 6: The implementation of GPRS encryption algorithm is mandatory for terminals supporting GPRS.
+
 </pre>
