*Empty MediaWiki Message*

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -46,3 +46,39 @@ NOTE 5: The use of DTMF is only mandatory when the speech teleservice is being u
 NOTE 6: The implementation of GPRS encryption algorithm is mandatory for terminals supporting GPRS.
 
 </pre>
+
+== GTA01 implementation of [required] features ==
+
+So how do we make sure we follow the mandatory requirements?
+
+=== 1.1  Display of Called Number ===
+No problem here.
+
+=== 1.2  Indication of Call Progress Signals ===
+This basically means that the user has to be informed about call initiated, other party ringing, busy, etc.  Those audible signals are handled by the TI Calypso.
+
+NOTE: Call progress indicators are described in GSM 02.40 [8]
+
+=== 1.3  Country/PLMN Indication ===
+We need to display the country and the currently selected network operator, as well as the list of available other operators. No problem here.
+
+NOTE: The indication is described in GSM 02.30 [7].
+
+=== 1.4  Country/PLMN Selection ===
+We need to support operator selection. No problem here. Has to comply with GSM 02.11 [4].
+
+=== 1.6  IMEI ===
+In TI Calypso.
+
+=== 1.7  Short Message ===
+We need to support SMS 'properly', i.e. display it to the user, and acknowledge reception to the GSM network.  Sending, too ;)
+
+=== 1.8  Short Message Overflow Indication ===
+The user has to be told if his SMS memory overflows.
+
+=== 1.12 Service Indicator ===
+?
+
+=== 1.13 Autocalling restriction capabilities ===
+
+I suppose this has already been implemented in the TI Calypso GSM firmware, since otherwise it in itself would not be GSM compliant.
