--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -78,6 +78,9 @@ We need to support SMS 'properly', i.e. display it to the user, and acknowledge 
 === 1.8  Short Message Overflow Indication ===
 The user has to be told if his SMS memory overflows.
 
+=== 1.11 International access function ===
+The user can use the "+" to generate the international access code. We should support this function. All of us travel way too much :-)
+
 === 1.12 Service Indicator ===
 We need to indicate sufficient signal strength and whether we're registered.  This is done via
 the dockapp.
