/* 1.21 Short Message Service Cell Broadcast DRX */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -111,6 +111,9 @@ NOTE: The short message service cell broadcast teleservice is described in speci
 === 1.21 Short Message Service Cell Broadcast DRX ===
 Some battery power saving mode for not listening to all cell broadcasts.  TODO: Check whether TI Calypso supports this, and how we configure it. It's optional. But we care about power saving!
 
+=== 1.25 Network Identity and Timezone ===
+The network name, time, and timezone information will be transferred from the network to our handset. We don't have to do anything with this -- but I think we should. For us to impliment profiles, this makes a lot of sense.
+
 === 1.26 Ciphering Indicator === 
 We need to support displaying whether any cipher (A5/...) is active, or whether the voice call is currently unencrypted.  We also need to support restriction of this feature by the SIM module.
 
