/* GTA01 implementation of [required] features */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -49,9 +49,10 @@ NOTE 6: The implementation of GPRS encryption algorithm is mandatory for termina
 
 </pre>
 
-== GTA01 implementation of [required] features ==
+== GTA01 implementation of features ==
+The following is a list of the mandatory and optional features we plan to support. 
 
-So how do we make sure we follow the mandatory requirements?
+* TODO: How do we make sure we follow the mandatory requirements?
 
 === 1.1  Display of Called Number ===
 No problem here.
