/* 1.21 Short Message Service Cell Broadcast DRX */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -110,7 +110,9 @@ We need to support receiving SMS Cell Broadcast.  Interestingly, the requirement
 NOTE: The short message service cell broadcast teleservice is described in specification GSM 02.03 [2].
 
 === 1.21 Short Message Service Cell Broadcast DRX ===
-Some battery power saving mode for not listening to all cell broadcasts.  TODO: Check whether TI Calypso supports this, and how we configure it. It's optional. But we care about power saving!
+Some battery power saving mode for not listening to all cell broadcasts.  
+
+* TODO: Check whether TI Calypso supports this, and how we configure it. It's optional. But we care about power saving!
 
 === 1.25 Network Identity and Timezone ===
 The network name, time, and timezone information will be transferred from the network to our handset. We don't have to do anything with this -- but I think we should. For us to impliment profiles, this makes a lot of sense.
