--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -83,8 +83,7 @@ The user has to be told if his SMS memory overflows.
 The user can use the "+" to generate the international access code. We should support this function. All of us travel way too much :-)
 
 === 1.12 Service Indicator ===
-We need to indicate sufficient signal strength and whether we're registered.  This is done via
-the dockapp.
+We need to indicate sufficient signal strength and whether we're registered.  This is handled by our [[GSM_Connection_Status | GSM Connection Status]] Pannel application.
 
 === 1.13 Autocalling restriction capabilities ===
 
