/* 1.1  Display of Called Number */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -55,7 +55,7 @@ The following is a list of the mandatory and optional features we plan to suppor
 * TODO: How do we make sure we follow the mandatory requirements?
 
 === 1.1  Display of Called Number ===
-No problem here.
+Incoming call numbers will be displayed using the [[Call_Notification_Dialog | Call Notification]] widget.
 
 === 1.2  Indication of Call Progress Signals ===
 This basically means that the user has to be informed about call initiated, other party ringing, busy, etc.  Those audible signals are handled by the TI Calypso.
