--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -97,6 +97,8 @@ Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
 voice channel, but actually signalled as messages through the GSM network into the [[MSC]] (Mobile Switching Centre), which then creates the tones into to the voice channel.
 
+All of this will be handled by the [[Dialer#In_Call_Mode | In Call Mode]] of the [[Dialer]] application.
+
 === 1.16 Subscription Identity Management ===
 No problem. This just says the we need to support [[SIM]] cards in their 'normal' way.
 
