/* 1.11 International access function */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -82,6 +82,8 @@ The user has to be told if his SMS memory overflows.
 === 1.11 International access function ===
 The user can use the "+" to generate the international access code. We should support this function. All of us travel way too much :-)
 
+The [[Input_Method#Phone_Mode | Phone Mode]] of our [[Input Method]] will handle this.
+
 === 1.12 Service Indicator ===
 We need to indicate sufficient signal strength and whether we're registered.  This is handled by our [[GSM_Connection_Status | GSM Connection Status]] Pannel application.
 
