/* 1.14 Emergency Calls capabilities */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -93,7 +93,9 @@ I suppose this has already been implemented in the [[TI Calypso]] GSM firmware, 
 
 === 1.14 Emergency Calls capabilities ===
 
-Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]). Need to check those requirements!
+Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]). 
+
+* TODO: Need to check those requirements!
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
