--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -125,7 +125,7 @@ The network name, time, and timezone information will be transferred from the ne
 === 1.26 Ciphering Indicator === 
 We need to support displaying whether any cipher (A5/...) is active, or whether the voice call is currently unencrypted.  We also need to support restriction of this feature by the SIM module.
 
-* TODO: This will probably be another dockapp.
+* TODO: This will probably be another [[Applications#Panel_Applications | Panel Application]].
 
 === 1.30 Support of GPRS Encryption ===
 TI Calypso does that for us.
