/* 1.8  Short Message Overflow Indication */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -79,6 +79,8 @@ We need to support SMS 'properly', i.e. display it to the user, and acknowledge 
 === 1.8  Short Message Overflow Indication ===
 The user has to be told if his SMS memory overflows.
 
+* TODO: Figure out how we want to display this. Or is just an more general "memory low" [[Information_Dialog | Information Dialog ]] enough?
+
 === 1.11 International access function ===
 The user can use the "+" to generate the international access code. We should support this function. All of us travel way too much :-)
 
