/* GTA01 implementation of features */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -52,7 +52,7 @@ NOTE 6: The implementation of GPRS encryption algorithm is mandatory for termina
 == GTA01 implementation of features ==
 The following is a list of the mandatory and optional features we plan to support. 
 
-* TODO: How do we make sure we follow the mandatory requirements?
+{{todo| How do we make sure we follow the mandatory requirements?}}
 
 === 1.1  Display of Called Number ===
 Incoming call numbers will be displayed using the [[Call_Notification_Dialog | Call Notification]] widget.
