/* GTA01 implementation of features */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -97,7 +97,7 @@ I suppose this has already been implemented in the [[TI Calypso]] GSM firmware, 
 
 Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]). 
 
-* TODO: Need to check those requirements!
+{{todo| Need to check those requirements!}}
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
@@ -119,7 +119,7 @@ NOTE: The short message service cell broadcast teleservice is described in speci
 === 1.21 Short Message Service Cell Broadcast DRX ===
 Some battery power saving mode for not listening to all cell broadcasts.  
 
-* TODO: Check whether TI Calypso supports this, and how we configure it. It's optional. But we care about power saving!
+{{todo| Check whether TI Calypso supports this, and how we configure it. It's optional. But we care about power saving!}}
 
 === 1.25 Network Identity and Timezone ===
 The network name, time, and timezone information will be transferred from the network to our handset. We don't have to do anything with this -- but I think we should. For us to impliment [[Preferences#Profiles | Profiles]], this makes a lot of sense.
@@ -127,7 +127,7 @@ The network name, time, and timezone information will be transferred from the ne
 === 1.26 Ciphering Indicator === 
 We need to support displaying whether any cipher (A5/...) is active, or whether the voice call is currently unencrypted.  We also need to support restriction of this feature by the SIM module.
 
-* TODO: This will probably be another [[Applications#Panel_Applications | Panel Application]].
+{{todo| This will probably be another [[Applications#Panel_Applications | Panel Application]].}}
 
 === 1.30 Support of GPRS Encryption ===
 TI Calypso does that for us.
