--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -65,7 +65,7 @@ This basically means that the user has to be informed about call initiated, othe
 === 1.3  Country/PLMN Indication ===
 We need to display the country and the currently selected network operator, as well as the list of available other operators. No problem here.
 
-NOTE: The indication is described in GSM 02.30 [7].
+{{note| The indication is described in GSM 02.30 [7].}}
 
 === 1.4  Country/PLMN Selection ===
 We need to support operator selection. No problem here. Has to comply with GSM 02.11 [4].
@@ -114,7 +114,7 @@ Those are the two standard GSM ciphers for the [[MS]]-[[BTS]] interface. [[TI Ca
 === 1.20 Short Message Service Cell Broadcast ===
 We need to support receiving SMS Cell Broadcast.  Interestingly, the requirement doesn't say we need to actually support displaying them :)  Reception is supposedly handled within [[TI Calypso]]. Anyway, we should display them.
 
-NOTE: The short message service cell broadcast teleservice is described in specification GSM 02.03 [2].
+{{note| The short message service cell broadcast teleservice is described in specification GSM 02.03 [2].}}
 
 === 1.21 Short Message Service Cell Broadcast DRX ===
 Some battery power saving mode for not listening to all cell broadcasts.  
