/* GSM 02.07 MS requirements */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -2,6 +2,8 @@
 
 The GSM 02.07 specification (Version 7.1.0 Release 1998) lists a table of required and optional features of MS (mobile stations):
 
+{{etsi_path}}/
+
 <pre>
 1.1  Display of Called Number                         M*
 1.2  Indication of Call Progress Signals              M*
