--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -60,6 +60,7 @@ Incoming call numbers will be displayed using the [[Call_Notification_Dialog | C
 === 1.2  Indication of Call Progress Signals ===
 This basically means that the user has to be informed about call initiated, other party ringing, busy, etc.  Those audible signals are handled by the TI Calypso.
 
+{{etsi_path}}
 {{note| Call progress indicators are described in GSM 02.40 [8]}}
 
 === 1.3  Country/PLMN Indication ===
