*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,6 +1,6 @@
 <big>'''Welcome to the GTA01Wiki'''</big>
 
-This is to be the evolving, definitive resource on [[GTA01]] development -- the GSM+AGPS Smartphone running [[OpenMoKo]].  The intention is to collaboratively improve and update all information on this site.
+This is to be the evolving, definitive resource on [[GTA01]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
 == Development ==
 
