--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -65,7 +65,7 @@ This basically means that the user has to be informed about call initiated, othe
 === 1.3  Country/PLMN Indication ===
 We need to display the country and the currently selected network operator, as well as the list of available other operators. No problem here.
 
-{{note| The indication is described in GSM 02.30 [7].}}
+{{note| The indication is described in [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
 
 === 1.4  Country/PLMN Selection ===
 We need to support operator selection. No problem here. Has to comply with GSM 02.11 [4].
