/* 1.4  Country/PLMN Selection */

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -70,6 +70,8 @@ We need to display the country and the currently selected network operator, as w
 === 1.4  Country/PLMN Selection ===
 We need to support operator selection. No problem here. Has to comply with GSM 02.11 [4].
 
+{{note| The indication is described in [{{etsi_path}}/0211-710.pdf GSM 02.11]}}
+
 === 1.6  IMEI ===
 In TI Calypso.
 
