--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -68,7 +68,7 @@ We need to display the country and the currently selected network operator, as w
 {{note| The indication is described in [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
 
 === 1.4  Country/PLMN Selection ===
-We need to support operator selection. No problem here. Has to comply with GSM 02.11 [4].
+We need to support operator selection. No problem here. 
 
 {{note| The indication is described in [{{etsi_path}}/0211-710.pdf GSM 02.11]}}
 
