--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -116,7 +116,7 @@ Those are the two standard GSM ciphers for the [[MS]]-[[BTS]] interface. [[TI Ca
 === 1.20 Short Message Service Cell Broadcast ===
 We need to support receiving SMS Cell Broadcast.  Interestingly, the requirement doesn't say we need to actually support displaying them :)  Reception is supposedly handled within [[TI Calypso]]. Anyway, we should display them.
 
-{{note| The short message service cell broadcast teleservice is described in specification GSM 02.03 [2].}}
+{{note| The short message service cell broadcast teleservice is described in specification [{{etsi_path}}/0203_700.pdf GSM 02.03]}}
 
 === 1.21 Short Message Service Cell Broadcast DRX ===
 Some battery power saving mode for not listening to all cell broadcasts.  
