--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -70,7 +70,7 @@ We need to display the country and the currently selected network operator, as w
 === 1.4  Country/PLMN Selection ===
 We need to support operator selection. No problem here. 
 
-{{note| The indication is described in [{{etsi_path}}/0211-710.pdf GSM 02.11]}}
+{{note| The detail is described in [{{etsi_path}}/0211-710.pdf GSM 02.11]}}
 
 === 1.6  IMEI ===
 In TI Calypso.
