--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -99,6 +99,8 @@ I suppose this has already been implemented in the [[TI Calypso]] GSM firmware, 
 
 Has to be implemented according to Teleservice 12 (see GSM 02.03 [2] and GSM 02.30 [7]). 
 
+{{note| The emergency calls capabilities are described in [{{etsi_path}}/0203_700.pdf GSM 02.03] and [{{etsi_path}}/0230-711.pdf GSM 02.30]}}
+
 {{todo| Need to check those requirements!}}
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
