--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,8 +17,7 @@ Please see
 * [[Documentation]] for end-user related documentation
 * [[Hardware]] for hardware-related (developer) documentation
 * [[Software]] for GTA01 software-related (developer) documentation
-
-The [[:Category:ToDo|To-Do List]] contains all the articles that with things that neeed to get done.
+* [[:Category:ToDo|To-Do List]] for all the articles with things that neeed to get done.
 
 == Getting started with this wiki (GTA01 unrelated) ==
 
